--- a/.github/workflows/build_docker.yaml
+++ b/.github/workflows/build_docker.yaml
@@ -1,5 +1,4 @@
-name: Build docker images
-
+name: build docker images
 on:
   push:
     branches: [ main ]
@@ -9,38 +8,26 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps: 
-    - name: Clone repository
-      uses: actions/checkout@v2
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
+    - uses: actions/checkout@v2
+    - uses: docker/setup-qemu-action@v1
       with:
         image: tonistiigi/binfmt:latest
         platforms: arm64,arm
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Extract metadata (tags, labels) for Docker
+    - uses: docker/setup-buildx-action@v1
+    - uses: docker/metadata-action@v3
       id: meta
-      uses: docker/metadata-action@v3
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
-    - name: Log in to the Container registry
-      uses: docker/login-action
+    - uses: docker/login-action@v1
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Build and push
-      uses: docker/build-push-action@v2
+    - uses: docker/build-push-action@v2
       with:
         context: .
         platforms: linux/amd64,linux/arm64,linux/arm/v7
