--- a/edge-device-plugin-daemonset.yaml
+++ b/edge-device-plugin-daemonset.yaml
@@ -37,3 +37,5 @@ spec:
         - name: device-plugin
           hostPath:
             path: /var/lib/kubelet/device-plugins
+      nodeSelector:
+        feature.node.kubernetes.io/pci-1ac1_089a.present: "true"
