--- a/.github/workflows/build_docker.yaml
+++ b/.github/workflows/build_docker.yaml
@@ -18,6 +18,10 @@ jobs:
         image: tonistiigi/binfmt:latest
         platforms: arm64,arm
     - uses: docker/setup-buildx-action@v1
+    - uses: docker/metadata-action@v3
+      id: meta
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
     - uses: docker/login-action@v1
       with:
         registry: ${{ env.REGISTRY }}
@@ -28,4 +32,5 @@ jobs:
         context: .
         platforms: linux/amd64,linux/arm64,linux/arm/v7
         push: ${{ github.event_name != 'pull_request' }}
-        tags: latest
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
