--- a/.github/workflows/build_docker.yaml
+++ b/.github/workflows/build_docker.yaml
@@ -22,6 +22,8 @@ jobs:
       id: meta
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        flavor: |
+          latest=true
     - uses: docker/login-action@v1
       with:
         registry: ${{ env.REGISTRY }}
