--- a/edge-device-plugin-daemonset.yaml
+++ b/edge-device-plugin-daemonset.yaml
@@ -39,4 +39,4 @@ spec:
             path: /var/lib/kubelet/device-plugins
 # Optional node-feature-discovery support
 #      nodeSelector:
-#        feature.node.kubernetes.io/pci-1ac1_089a.present: "true"
+#        feature.node.kubernetes.io/pci-0880_1ac1.present: "true"
