Add Helm Chart.

--- a/edge-device-plugin-daemonset.yaml
+++ b/edge-device-plugin-daemonset.yaml
@@ -19,7 +19,10 @@ spec:
       tolerations:
       - key: CriticalAddonsOnly
         operator: Exists
-      - key: coral.ai/gpu
+      - key: coral.ai/tpu
+        operator: Exists
+        effect: NoSchedule
+      - key: intel.com/vpu
         operator: Exists
         effect: NoSchedule
       priorityClassName: "system-node-critical"
