--- a/.github/workflows/release_charts.yml
+++ b/.github/workflows/release_charts.yml
@@ -1,4 +1,4 @@
-name: Release Charts
+name: release helm charts
 
 on:
   push:
@@ -26,5 +26,6 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.2.1
+        continue-on-error: true
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
