--- a/charts/edge-device-plugin/templates/edge-device-plugin-daemonset.yaml
+++ b/charts/edge-device-plugin/templates/edge-device-plugin-daemonset.yaml
@@ -7,6 +7,7 @@ spec:
   selector:
     matchLabels:
       name: {{ .Chart.Name }}-ds
+  {{- with .Values.updateStrategy }}
   updateStrategy:
     {{- toYaml . | nindent 4 }}
   {{- end }}
