--- a/edge-device-plugin-daemonset.yaml
+++ b/edge-device-plugin-daemonset.yaml
@@ -25,6 +25,9 @@ spec:
       - key: intel.com/vpu
         operator: Exists
         effect: NoSchedule
+      - key: broadcom.com/gpu
+        operator: Exists
+        effect: NoSchedule
       priorityClassName: "system-node-critical"
       containers:
       - image:   ghcr.io/h-s-c/edge-device-plugin:latest
