--- a/.github/workflows/build_docker.yaml
+++ b/.github/workflows/build_docker.yaml
@@ -16,7 +16,7 @@ jobs:
     - uses: docker/setup-qemu-action@v2
       with:
         image: tonistiigi/binfmt:latest
-        platforms: arm64,riscv64
+        platforms: arm64
     - uses: docker/setup-buildx-action@v1
     - uses: docker/metadata-action@v3
       id: meta
@@ -32,7 +32,7 @@ jobs:
     - uses: docker/build-push-action@v3
       with:
         context: .
-        platforms: linux/amd64,linux/arm64,linux/riscv64
+        platforms: linux/amd64,linux/arm64
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
