--- a/.github/workflows/build_docker.yaml
+++ b/.github/workflows/build_docker.yaml
@@ -22,8 +22,8 @@ jobs:
       id: meta
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        flavor: |
-          latest=true
+        tags: |
+          type=semver,pattern={{version}}
     - uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
