--- a/.github/workflows/build_docker.yaml
+++ b/.github/workflows/build_docker.yaml
@@ -22,8 +22,8 @@ jobs:
       id: meta
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        tags: |
-          type=semver,pattern={{version}}
+        flavor: |
+          latest=true
     - uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
