--- a/.github/workflows/build_docker.yaml
+++ b/.github/workflows/build_docker.yaml
@@ -2,8 +2,8 @@ name: build docker images
 
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - main
 
 env:
   REGISTRY: ghcr.io
@@ -15,6 +15,8 @@ jobs:
     steps: 
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - uses: docker/login-action@v3
         with:
@@ -26,6 +28,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
+            type=sha 
             type=semver,pattern={{version}}
 
       - uses: docker/setup-qemu-action@v3
