--- a/.github/workflows/release_charts_build_docker.yml
+++ b/.github/workflows/release_charts_build_docker.yml
@@ -43,6 +43,7 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Extract metadata
         uses: docker/metadata-action@v5
         id: meta
@@ -50,7 +51,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=sha 
-            type=semver,pattern={{version}}
+             type=match,pattern=edge-device-plugin-\d.\d.\d
 
       - name: Setup container build
         uses: docker/setup-qemu-action@v3
