--- a/.github/workflows/release_charts.yml
+++ b/.github/workflows/release_charts.yml
@@ -68,3 +68,20 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+          check-latest: true
+
+      - name: Set up chart-testing
+        uses: helm/chart-testing-action@v2.6.1
+
+      - name: Run chart-testing (lint)
+        run: ct lint --all --config ct.yaml
+
+      - name: Create kind cluster
+        uses: helm/kind-action@v1.9.0
+
+      - name: Run chart-testing (install)
+        run: ct install --all --config ct.yaml
