--- a/.github/workflows/release_charts.yml
+++ b/.github/workflows/release_charts.yml
@@ -1,4 +1,4 @@
-name: release helm charts and build docker container
+name: release helm charts
 
 on:
   push:
@@ -7,10 +7,6 @@ on:
 
 permissions:
   contents: write
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   release:
@@ -26,7 +22,7 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
-      - name: Install Helm
+      - name: Set up Helm
         uses: azure/setup-helm@v3
         with:
           version: v3.14.0
@@ -36,38 +32,7 @@ jobs:
         continue-on-error: true
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-
-      - name: Login into container registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata
-        uses: docker/metadata-action@v5
-        id: meta
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=sha 
-             type=match,pattern=edge-device-plugin-\d.\d.\d
-
-      - name: Setup container build
-        uses: docker/setup-qemu-action@v3
-        with:
-          image: tonistiigi/binfmt:latest
-          platforms: arm64
-      - uses: docker/setup-buildx-action@v3
-
-      - name: Build and push container
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          CR_SKIP_EXISTING: true
 
       - uses: actions/setup-python@v5
         with:
@@ -81,7 +46,7 @@ jobs:
         run: ct lint --all --config ct.yaml
 
       - name: Create kind cluster
-        uses: helm/kind-action@v1.9.0
+        uses: helm/kind-action@v1.8.0
 
       - name: Run chart-testing (install)
         run: ct install --all --config ct.yaml
