--- a/.github/workflows/build_container.yml
+++ b/.github/workflows/build_container.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: |
-            latest=yes
+            latest=true
           tags: |
             type=sha 
 
