--- a/.github/workflows/release_charts.yml
+++ b/.github/workflows/release_charts.yml
@@ -1,9 +1,12 @@
 name: release helm charts
 
 on:
-  push:
+  workflow_run:
+    workflows: ["build container"]
     branches:
       - main
+    types: 
+      - completed
 
 permissions:
   contents: write
