--- a/.github/workflows/build_container.yml
+++ b/.github/workflows/build_container.yml
@@ -58,5 +58,5 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}, ghcr.io:${{ github.repository }}:${{ steps.chart.outputs.appVersion }}
+          tags: ${{ steps.meta.outputs.tags }}, ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ steps.chart.outputs.appVersion }}
           labels: ${{ steps.meta.outputs.labels }}
